Ensure icons align in boost; fixes #29

--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,8 @@
 #page-Quickmail .mform input#id_subject {
     width: 75%;
 }
+
+.block_clampmail .unlist > li > .column {
+    display: inline-block;
+    vertical-align: unset;
+}
